--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="sidebar d-flex flex-column p-3 text-white align-items-center justify-content-center position-fixed">
         <div class="position-absolute top-0 d-flex flex-column align-items-center">
             <i><img src="./assets/images/logo.png" alt="logo" class="logo-wrap"></i>
-            <button class="btn btn-warning button5">Upgrade</button>
+            <button class="btn-sidebar btn-warning button5">Upgrade</button>
         </div>
         <div class="d-flex flex-column  p-6 sidebar-wrap">
             <a href="#" class="fas fa-home my-3 text-decoration-none text-white"><span
@@ -46,7 +46,7 @@
             </div>
         </div>
         <!-- Thumbnail Slider -->
-        <section class="movie-slider-section text-white px-5 py-4">
+        <section class="movie-slider-section text-white">
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <h4>Latest Releases</h4>
                 <a href="#" class="text-white-50 text-decoration-none">View All</a>
@@ -97,7 +97,7 @@
             </div>
         </section>
 
-        <section class="movie-slider-section text-white px-5 py-4">
+        <section class="movie-slider-section text-white">
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <h4>Popular language</h4>
                 <a href="#" class="text-white-50 text-decoration-none">View All</a>
@@ -118,19 +118,20 @@
                 </div>
             </div>
         </section>
+        <section class="movie-slider-section text-white">
+                <div class="movie-slider-2 d-flex justify-content-center align-items-center gap-3 overflow-auto ml-2">
+                    <a href="#"><img src="./assets/images/pc.avif" class="movie-card" /></a>
+                    <a href="#"><img src="./assets/images/mountain.avif" class="movie-card" /></a>
+                    <a href="#"><img src="./assets/images/hbo.avif" class="movie-card" /></a>
+                    <a href="#"><img src="./assets/images/hotstar.avif" class="movie-card" /></a>
+                    <a href="#"><img src="./assets/images/1535226-a-3080287f77cd.webp" class="movie-card" /></a>
+                    <a href="#"><img src="./assets/images/d.webp" class="movie-card" /></a>
+                    <a href="#"><img src="./assets/images/star-war.webp" class="movie-card" /></a>
+                    <a href="#"><img src="./assets/images/n-g.webp" class="movie-card" /></a>
+                </div>
+        </section>
 
-        <div class="">
-            <div class="movie-slider-2 d-flex justify-content-center align-items-center gap-3">
-                <a href="#"><img src="./assets/images/pc.avif" class="movie-card" /></a>
-                <a href="#"><img src="./assets/images/mountain.avif" class="movie-card" /></a>
-                <a href="#"><img src="./assets/images/hbo.avif" class="movie-card" /></a>
-                <a href="#"><img src="./assets/images/hotstar.avif" class="movie-card" /></a>
-                <a href="#"><img src="./assets/images/1535226-a-3080287f77cd.webp" class="movie-card" /></a>
-                <a href="#"><img src="./assets/images/d.webp" class="movie-card" /></a>
-            </div>
-        </div>
-
-        <section class="movie-slider-section text-white px-5 py-4">
+        <section class="movie-slider-section text-white">
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <h4>Popular Genres</h4>
                 <a href="#" class="text-white-50 text-decoration-none">View All</a>
@@ -153,7 +154,7 @@
         </section>
 
 
-        <section class="movie-slider-section text-white px-5 py-4">
+        <section class="movie-slider-section text-white">
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <h4>Peackoc's Finest</h4>
                 <a href="#" class="text-white-50 text-decoration-none">View All</a>
@@ -172,12 +173,12 @@
                     <a href="#"><img src="./assets/images/finest-3.avif" class="movie-card" /></a>
                     <a href="#"><img src="./assets/images/finest-4.avif" class="movie-card" /></a>
                     <a href="#"><img src="./assets/images/finest-5.webp" class="movie-card" /></a>
-                
+
                 </div>
             </div>
         </section>
 
-        <section class="movie-slider-section text-white px-5 py-4">
+        <section class="movie-slider-section text-white">
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <h4>Action Movies</h4>
                 <a href="#" class="text-white-50 text-decoration-none">View All</a>
@@ -225,22 +226,19 @@
                             </div>
                             <div class="col-6 col-md-2">
                                 <div class="highlight-card">
-                                    <img class="ipl-card-img" src="./assets/images/panjab.avif"
-                                        alt="Highlight 3">
+                                    <img class="ipl-card-img" src="./assets/images/panjab.avif" alt="Highlight 3">
                                     <div class="highlight-title">PBKS vs LSG: Highlights</div>
                                 </div>
                             </div>
                             <div class="col-6 col-md-2">
                                 <div class="highlight-card">
-                                    <img class="ipl-card-img" src="./assets/images/kkkr.avif"
-                                        alt="Highlight 4">
+                                    <img class="ipl-card-img" src="./assets/images/kkkr.avif" alt="Highlight 4">
                                     <div class="highlight-title">KKR vs RR: Highlights</div>
                                 </div>
                             </div>
                             <div class="col-6 col-md-2">
                                 <div class="highlight-card">
-                                    <img class="ipl-card-img" src="./assets/images/csk.avif"
-                                        alt="Highlight 5">
+                                    <img class="ipl-card-img" src="./assets/images/csk.avif" alt="Highlight 5">
                                     <div class="highlight-title">RCB vs CSK: Highlights</div>
                                 </div>
                             </div>
@@ -252,14 +250,14 @@
 
 
         <div class="container my-5 overflow-auto d-flex gap-3">
-            <div class="card bg-dark text-white border-0 rounded-4 p-3">
+            <div class="card-movie bg-dark text-white border-0 rounded-4 p-3">
                 <div class="row g-0">
                     <div class="col-12 text-end pe-3">
                         <span class="text-white-50">हिंदी <i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="col-12 text-center">
-                        <img src="./assets/images/1734496960843-i.webp" alt="Illegal Poster" class="img-fluid rounded-3 mb-3"
-                            style="max-height: 300px;">
+                        <img src="./assets/images/1734496960843-i.webp" alt="Illegal Poster"
+                            class="img-fluid rounded-3 mb-3" style="max-height: 300px;">
                     </div>
                     <div class="col-12 text-center">
                         <h2 class="fw-bold display-6">ILLEGAL</h2>
@@ -280,14 +278,14 @@
                     </div>
                 </div>
             </div>
-            <div class="card bg-dark text-white border-0 rounded-4 p-3">
+            <div class="card-movie bg-dark text-white border-0 rounded-4 p-3">
                 <div class="row g-0">
                     <div class="col-12 text-end pe-3">
                         <span class="text-white-50">हिंदी <i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="col-12 text-center">
-                        <img src="./assets/images/1734496960843-i.webp" alt="Illegal Poster" class="img-fluid rounded-3 mb-3"
-                            style="max-height: 300px;">
+                        <img src="./assets/images/1734496960843-i.webp" alt="Illegal Poster"
+                            class="img-fluid rounded-3 mb-3" style="max-height: 300px;">
                     </div>
                     <div class="col-12 text-center">
                         <h2 class="fw-bold display-6">ILLEGAL</h2>
@@ -308,14 +306,14 @@
                     </div>
                 </div>
             </div>
-            <div class="card bg-dark text-white border-0 rounded-4 p-3">
+            <div class="card-movie bg-dark text-white border-0 rounded-4 p-3">
                 <div class="row g-0">
                     <div class="col-12 text-end pe-3">
                         <span class="text-white-50">हिंदी <i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="col-12 text-center">
-                        <img src="./assets/images/1734496960843-i.webp" alt="Illegal Poster" class="img-fluid rounded-3 mb-3"
-                            style="max-height: 300px;">
+                        <img src="./assets/images/1734496960843-i.webp" alt="Illegal Poster"
+                            class="img-fluid rounded-3 mb-3" style="max-height: 300px;">
                     </div>
                     <div class="col-12 text-center">
                         <h2 class="fw-bold display-6">ILLEGAL</h2>
@@ -336,14 +334,70 @@
                     </div>
                 </div>
             </div>
-            <div class="card bg-dark text-white border-0 rounded-4 p-3">
+            <div class="card-movie bg-dark text-white border-0 rounded-4 p-3">
                 <div class="row g-0">
                     <div class="col-12 text-end pe-3">
                         <span class="text-white-50">हिंदी <i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="col-12 text-center">
-                        <img src="./assets/images/1734496960843-i.webp" alt="Illegal Poster" class="img-fluid rounded-3 mb-3"
-                            style="max-height: 300px;">
+                        <img src="./assets/images/1734496960843-i.webp" alt="Illegal Poster"
+                            class="img-fluid rounded-3 mb-3" style="max-height: 300px;">
+                    </div>
+                    <div class="col-12 text-center">
+                        <h2 class="fw-bold display-6">ILLEGAL</h2>
+                    </div>
+                    <div class="col-12 d-flex justify-content-center align-items-center mt-3">
+                        <button class="btn btn-light fw-bold me-2 px-4 py-2"><i class="fas fa-play me-2"></i>Watch
+                            Now</button>
+                        <button class="btn btn-outline-light px-3 py-2"><i class="fas fa-plus"></i></button>
+                    </div>
+                    <div class="col-12 text-center mt-3 text-secondary fw-semibold small">
+                        2024 • U/A 16+ • 3 Seasons • 6 Languages
+                    </div>
+                    <div class="col-12 text-center mt-2 text-white-50 px-4">
+                        <p class="mb-0">
+                            Justice for sale? In a high-end law firm, where ethics take a backseat to billable hours,
+                            one lawyer fights back.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-movie bg-dark text-white border-0 rounded-4 p-3">
+                <div class="row g-0">
+                    <div class="col-12 text-end pe-3">
+                        <span class="text-white-50">हिंदी <i class="fas fa-chevron-down"></i></span>
+                    </div>
+                    <div class="col-12 text-center">
+                        <img src="./assets/images/1734496960843-i.webp" alt="Illegal Poster"
+                            class="img-fluid rounded-3 mb-3" style="max-height: 300px;">
+                    </div>
+                    <div class="col-12 text-center">
+                        <h2 class="fw-bold display-6">ILLEGAL</h2>
+                    </div>
+                    <div class="col-12 d-flex justify-content-center align-items-center mt-3">
+                        <button class="btn btn-light fw-bold me-2 px-4 py-2"><i class="fas fa-play me-2"></i>Watch
+                            Now</button>
+                        <button class="btn btn-outline-light px-3 py-2"><i class="fas fa-plus"></i></button>
+                    </div>
+                    <div class="col-12 text-center mt-3 text-secondary fw-semibold small">
+                        2024 • U/A 16+ • 3 Seasons • 6 Languages
+                    </div>
+                    <div class="col-12 text-center mt-2 text-white-50 px-4">
+                        <p class="mb-0">
+                            Justice for sale? In a high-end law firm, where ethics take a backseat to billable hours,
+                            one lawyer fights back.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-movie bg-dark text-white border-0 rounded-4 p-3">
+                <div class="row g-0">
+                    <div class="col-12 text-end pe-3">
+                        <span class="text-white-50">हिंदी <i class="fas fa-chevron-down"></i></span>
+                    </div>
+                    <div class="col-12 text-center">
+                        <img src="./assets/images/1734496960843-i.webp" alt="Illegal Poster"
+                            class="img-fluid rounded-3 mb-3" style="max-height: 300px;">
                     </div>
                     <div class="col-12 text-center">
                         <h2 class="fw-bold display-6">ILLEGAL</h2>
@@ -366,7 +420,7 @@
             </div>
         </div>
 
-        <section class="movie-slider-section text-white px-5 py-4">
+        <section class="movie-slider-section text-white">
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <h4>Best Of Originals</h4>
                 <a href="#" class="text-white-50 text-decoration-none">View All</a>
@@ -391,7 +445,7 @@
             </div>
         </section>
 
-        <section class="movie-slider-section text-white px-5 py-4">
+        <section class="movie-slider-section text-white">
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <h4>Peackoc's Finest</h4>
                 <a href="#" class="text-white-50 text-decoration-none">View All</a>
@@ -410,12 +464,12 @@
                     <a href="#"><img src="./assets/images/finest-3.avif" class="movie-card" /></a>
                     <a href="#"><img src="./assets/images/finest-4.avif" class="movie-card" /></a>
                     <a href="#"><img src="./assets/images/finest-5.webp" class="movie-card" /></a>
-                
+
                 </div>
             </div>
         </section>
 
-        <section class="movie-slider-section text-white px-5 py-4">
+        <section class="movie-slider-section text-white">
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <h4>Latest Releases</h4>
                 <a href="#" class="text-white-50 text-decoration-none">View All</a>
@@ -440,8 +494,8 @@
                 </div>
             </div>
         </section>
-   
-        <section class="movie-slider-section text-white px-5 py-4">
+
+        <section class="movie-slider-section text-white">
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <h4>Action Movies</h4>
                 <a href="#" class="text-white-50 text-decoration-none">View All</a>
@@ -465,7 +519,7 @@
         </section>
 
 
-        <section class="movie-slider-section text-white px-5 py-4">
+        <section class="movie-slider-section text-white">
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <h4>Best Of Originals</h4>
                 <a href="#" class="text-white-50 text-decoration-none">View All</a>
